--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "hono": "^4.11.6"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20260127.0",
     "wrangler": "^4.4.0"
   }
 }
