--- a/api/wrangler.jsonc
+++ b/api/wrangler.jsonc
@@ -4,7 +4,8 @@
   "main": "src/index.ts",
   "compatibility_date": "2026-01-26",
   "vars": {
-    "SPOTIFY_REDIRECT_URL": "https://kpop-streaming-tracker.vercel.app/",
+    // "SPOTIFY_REDIRECT_URL": "https://kpop-streaming-tracker.vercel.app/",
+    "SPOTIFY_REDIRECT_URL": "http://127.0.0.1:3000/callback",
   },
   // "compatibility_flags": [
   //   "nodejs_compat"
